<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>it.frafol</groupId>
        <artifactId>cleanstaffchat</artifactId>
        <version>1.0.3</version>
    </parent>

    <artifactId>hytale</artifactId>
    <packaging>jar</packaging>

    <name>hytale</name>

    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>net.byteflux.libby</pattern>
                                    <shadedPattern>it.frafol.cleanstaffchat.hytale.libs.libby</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/versions/**</exclude>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>META-INF/services/com.fasterxml.jackson.core.*</exclude>
                                        <exclude>*.txt</exclude>
                                        <exclude>*.md</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>com.fasterxml.jackson.core:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.byteflux</groupId>
            <artifactId>libby-core</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>net.byteflux</groupId>
            <artifactId>libby-hytale</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.hypixel.hytale</groupId>
            <artifactId>Server</artifactId>
            <version>1.0.0-EA</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/HytaleServer.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>6.3.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ru.vyarus</groupId>
            <artifactId>yaml-config-updater</artifactId>
            <version>1.4.4</version>
        </dependency>
        <dependency>
            <groupId>me.carleslc.Simple-YAML</groupId>
            <artifactId>Simple-Yaml</artifactId>
            <version>1.8.4</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>